@@ -1,4 +1,4 @@
-/* $Id: url.c,v 1.59 2002/12/14 15:18:39 ukai Exp $ */
+/* $Id: url.c,v 1.60 2002/12/14 16:09:51 ukai Exp $ */
 #include "fm.h"
 #include <sys/types.h>
 #include <sys/socket.h>
@@ -674,6 +674,14 @@ parseURL(char *url, ParsedURL *p_url, ParsedURL *current)
     p_url->real_file = NULL;
     p_url->query = NULL;
     p_url->label = NULL;
+
+    /* RFC1808: Relative Uniform Resource Locators
+     * 4.  Resolving Relative URLs
+     */
+    if (*url == '\0' && current) {
+	copyParsedURL(p_url, current);
+	return;
+    }
 
     if (*url == '#') {		/* label only */
 	if (current)
