@@ -1,3 +1,8 @@
+2002-12-15  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03573] Re: Bug#172851: w3m: In form, takes hostname as baseref for relative URI action
+	* url.c (parseURL): if empty is URL, base URL is used
+
 2002-12-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03571] base=0 -> 10 in toNumber()
@@ -5868,4 +5873,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.622 2002/12/14 15:37:56 ukai Exp $
+$Id: ChangeLog,v 1.623 2002/12/14 16:09:51 ukai Exp $
